[gd_scene load_steps=3 format=3 uid="uid://do7y6617u0gw3"]

[ext_resource type="Script" uid="uid://cm2a01whek6gg" path="res://horror_ui_ui_scenes/ui/MainMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c08v5tniiu6ol" path="res://menu.png" id="2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.35
anchor_right = 0.65
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
stretch_mode = 6

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -13.0
offset_top = 127.0
offset_right = 1146.0
offset_bottom = 773.0
theme_override_constants/separation = 30
alignment = 1

[node name="NewGameButton" type="Button" parent="MenuContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "      
                                                                            "

[node name="LoadGameButton" type="Button" parent="MenuContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
text = "                                                                              
                                                                               "

[node name="SettingsButton" type="Button" parent="MenuContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "
                                                                "

[node name="QuitButton" type="Button" parent="MenuContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "
                                  "
